<resources>
    <string name="app_name">Bookmark</string>
    <string name="search_title">Search</string>
    <string name="reset_title">Reset</string>
    <string name="filter_hint">Фильтр</string>
    <string name="arсhive">Архивные:</string>
    <string name="book_img">Обложка книги</string>
    <string name="more_actions">More Actions</string>
    <string name="add_book_title">Создание/редактирование записи</string>
    <string name="upload_image">upload image</string>
    <string name="author_name">Имя</string>
    <string name="author_second_name">Фамилия</string>
    <string name="book_name">Название книги</string>
    <string name="series_name">Название серии</string>
    <string name="number_sign">№</string>
    <string name="is_archived">Архив</string>
    <string name="mark">Оценка:</string>
    <string name="review">Рецензия:</string>
    <string name="authorNameError">Расскажите, пожалуйста, каким именем звала автора его матушка</string>
    <string name="bookTitleError">Нам бы не хотелось, чтобы творчество столь великого творца осталось безымянным</string>
    <string name="readedDate">Дата прочтения</string>
    <string name="inputTags">Введите тэги через запятую</string>
    <string name="delete_elem">Удалить</string>
    <string name="edit_elem">Редактировать</string>
    <string-array name="filter_entries">
        <item>Тэги</item>
        <item>Авторы</item>
        <item>Оценки</item>
        <item>Года</item>
        <item>Архив</item>
    </string-array>
    <string-array name="sort_entries">
        <item>Сорт по…</item>
        <item>Времени</item>
        <item>Автору</item>
        <item>Названию</item>
    </string-array>
</resources>
